--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "co": "^4.6.0",
     "commander": "^2.9.0",
     "download-git-repo": "^0.2.1",
+    "es6-template": "^1.0.4",
     "ora": "^1.1.0"
   },
   "devDependencies": {
