--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cf-web-cli",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "cf web cli for angular 2",
   "main": "./lib/index.js",
   "bin": {
@@ -10,6 +10,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mokesun",
+  "repository":{
+    "type" : "git",
+    "url" : "https://github.com/sunkj/cf-web-cli"
+  },
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.3",
